--- a/source/_vars.scss
+++ b/source/_vars.scss
@@ -2,3 +2,7 @@
  * Variables Stylesheet | Fork Corner
  * By Waren Gonzaga
  */
+
+$corner-size: 200px;
+$default-bg-color: #242424;
+$github-bg-color: #181717;
