--- a/source/_base.scss
+++ b/source/_base.scss
@@ -65,7 +65,7 @@ body {
             text-decoration: none;
             width: $corner-size/4;
             height: $corner-size/4;
-            background: url("https://simpleicons.org/icons/github.svg");
+            background: url("https://raw.githubusercontent.com/WarenGonzaga/fork-corner/main/svg/github.svg");
         }
         &.fc-theme-github + div {
             background-color: $github-bg-color;
@@ -76,7 +76,7 @@ body {
             text-decoration: none;
             width: $corner-size/4;
             height: $corner-size/4;
-            background: url("https://simpleicons.org/icons/github.svg");
+            background: url("https://raw.githubusercontent.com/WarenGonzaga/fork-corner/main/svg/github.svg");
         }
         &.fc-theme-github + div {
             background-color: $github-bg-color;
