--- a/fork-corner.css
+++ b/fork-corner.css
@@ -65,7 +65,7 @@ body {
   text-decoration: none;
   width: 50px;
   height: 50px;
-  background: url("https://simpleicons.org/icons/github.svg"); }
+  background: url("https://raw.githubusercontent.com/WarenGonzaga/fork-corner/main/svg/github.svg"); }
 
 .fork-corner.fc-tr.fc-theme-github + div {
   background-color: #181717; }
@@ -74,7 +74,7 @@ body {
   text-decoration: none;
   width: 50px;
   height: 50px;
-  background: url("https://simpleicons.org/icons/github.svg"); }
+  background: url("https://raw.githubusercontent.com/WarenGonzaga/fork-corner/main/svg/github.svg"); }
 
 .fork-corner.fc-tl.fc-theme-github + div {
   background-color: #181717; }
