--- a/source/_vars.scss
+++ b/source/_vars.scss
@@ -1,8 +1,7 @@
-/*!
- * Variables Stylesheet | Fork Corner
- * By Waren Gonzaga
- */
-
 $corner-size: 200px;
+$default-icon-color: #ffffff;
 $default-bg-color: #242424;
+$github-icon-color: #ffffff;
 $github-bg-color: #181717;
+$bitbucket-icon-color: #ffffff;
+$bitbucket-bg-color: #205081;
