--- a/source/_vars.scss
+++ b/source/_vars.scss
@@ -1,7 +1,9 @@
 $corner-size: 200px;
 $default-icon-color: #ffffff;
-$default-bg-color: #242424;
+$default-bg-color: #f34f29;
 $github-icon-color: #ffffff;
 $github-bg-color: #181717;
+$gitlab-icon-color: #ffffff;
+$gitlab-bg-color: #e24329;
 $bitbucket-icon-color: #ffffff;
 $bitbucket-bg-color: #205081;
