--- a/source/_vars.scss
+++ b/source/_vars.scss
@@ -1,4 +1,7 @@
-$corner-size: 200px;
+$default-corner-size: 200px;
+$small-corner-size: 150px;
+$medium-corner-size: 250px;
+$large-corner-size: 300px;
 $default-icon-color: #ffffff;
 $default-bg-color: #f34f29;
 $github-icon-color: #ffffff;
