--- a/source/_vars.scss
+++ b/source/_vars.scss
@@ -2,11 +2,11 @@ $default-corner-size: 200px;
 $small-corner-size: 150px;
 $medium-corner-size: 250px;
 $large-corner-size: 300px;
-$default-icon-color: #ffffff;
+$default-icon-color: #fff;
 $default-bg-color: #f34f29;
-$github-icon-color: #ffffff;
+$github-icon-color: #fff;
 $github-bg-color: #181717;
-$gitlab-icon-color: #ffffff;
+$gitlab-icon-color: #fff;
 $gitlab-bg-color: #e24329;
-$bitbucket-icon-color: #ffffff;
+$bitbucket-icon-color: #fff;
 $bitbucket-bg-color: #205081;
